# anvil

./: .gitignore  LICENSE  README.md  anvil.opam  dune-project  host-docs.sh  run-tests.py
examples/: .gitignore  AluExample.anvil  AluExample.test  Makefile  RCATop.anvil  README.md  Reg.anvil  alu.anvil  arbiter.anvil  arbiter.test  arbiter2.anvil  arbiter2.test  assign_repeat.anvil  assign_repeat.test  axi.anvil  branch_borrow.anvil  bug_stuck.anvil  cache.anvil  cache.test  comb_loop.anvil  concurrent.anvil  concurrent.test  counter.anvil  counter2.anvil  counter2.test  double_send.anvil  enum_test.anvil  enum_test.test  extern_fifo_top.anvil  extern_proc.anvil  extern_proc.anvil.sv  extern_proc.test  extern_proc2.anvil  extern_proc2.anvil.sv  extern_proc2.test  fifo.anvil  gen-tests.sh  gen_seq_test.anvil  general_recurse_assign.anvil  general_recurse_assign.test  (+76 more)
lib/: buildScheduler.ml  buildScheduler.mli  codegen.ml  codegen.mli  codegenContext.ml  codegenContext.mli  codegenFormat.ml  codegenFormat.mli  codegenHelpers.ml  codegenPort.ml  codegenPort.mli  codegenPrinter.ml  codegenPrinter.mli  codegenStates.ml  codegenStates.mli  compileDriver.ml  compileDriver.mli  config.ml  config.mli  dune  eventGraph.ml  eventGraph.mli  eventGraphOps.ml  eventGraphOps.mli  eventGraphQuery.ml  eventGraphQuery.mli  except.ml  graphAnalysis.ml  graphAnalysis.mli  graphBuilder.ml  graphBuilder.mli  graphOpt.ml  graphOpt.mli  inChannelCachableAliasable.ml  jsonOutput.ml  jsonOutput.mli  lang.ml  lexer.mll  lifetime.ml  lifetimeCheck.ml  (+18 more)
pseudo-exp/: README.md
test/: anvil.ml  (+1 more)
(+164 files in other folders)
